[package]
name = "cron-bot"
version = "0.1.0"
edition = "2021" 

[dependencies]
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
solana-sdk = "1.17.3" 
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
chrono = "0.4.38"
reqwest = { version = "0.11", features = ["json"] }
tax-token = { git = "https://github.com/cenwadike/tax-spl.git" }
spl-token = "4.0.0" 
spl-associated-token-account = "2.0.0"  
futures = "0.3"
solana-account-decoder = "1.17.3" 